--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
 	<script type="text/javascript" src="script/app.js" defer></script>
 </head>
 <body>
+
 	<div id="camera">
+
 		<div class="level">
 			<div class="object"></div>
 			<div class='floor'></div>
 		</div>
-
+		<h2>WASD(or ponters) to move, QE(or mouse) to rotate (rotation is broken)</h2>
+		<img class="testWeapon" src='http://static.giantbomb.com/uploads/scale_small/1/13692/1809849-3.png'>
 	</div>
 </body>
 </html>
