--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 
 		<div class="level">
 			<div class="object"></div>
+			<div class="glass" ></div>
 			<div class='floor'></div>
+
+
 		</div>
 		<h2>WASD(or ponters) to move, QE(or mouse) to rotate (rotation is broken)</h2>
 		<img class="testWeapon" src='http://static.giantbomb.com/uploads/scale_small/1/13692/1809849-3.png'>
