Changed SkyBox, comments

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
 		</div>
-		<h2>WASD(or ponters) to move, QE(or mouse) to rotate (rotation is broken)</h2>
+		<h2>WASD(or ponters) to move, QE(or mouse) to rotate (rotation is broken and works soo bad -_- )</h2>
 		<img class="testWeapon" src='http://static.giantbomb.com/uploads/scale_small/1/13692/1809849-3.png'>
 	</div>
 </body>
