--- a/index.html
+++ b/index.html
@@ -9,29 +9,13 @@
 	<script type="text/javascript" src="script/app.js" defer></script>
 </head>
 <body>
-
 	<div id="camera">
-
 		<div class="level">
 			<div class="object"></div>
 			<div class="glass" ></div>
 			<div class='floor'></div>
-
-
-
-
-
-
- 
-
-
-
-
-
-
-
 		</div>
-		<h2>WASD(or ponters) to move, QE(or mouse) to rotate (rotation is broken and works soo bad -_- )</h2>
+		<h2>WASD(or ponters) to move, QE(or mouse) to rotate</h2>
 		<img class="testWeapon" src='http://static.giantbomb.com/uploads/scale_small/1/13692/1809849-3.png'>
 	</div>
 </body>
