Local links, media, static resolution, icon, music

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>DukeNukem3D</title>
+	<link rel="icon" href="style/img/icon.png">
 	<link rel="stylesheet" type="text/css" href="style/style.css">
 	<script type="text/javascript" src="script/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="script/models.js"></script>
