--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 			<div class="glass" ></div>
 			<div class='floor'></div>
 		</div>
-		<h2>WASD(or ponters) to move, QE(or mouse) to rotate</h2>
-		<img class="testWeapon" src='http://static.giantbomb.com/uploads/scale_small/1/13692/1809849-3.png'>
+		<h2>WASD(or ponters) to move, QE(or mouse) to rotate. Press Enter for better perfomance</h2>
+		<img class="testWeapon" src='style/img/weapon.png'>
 	</div>
 </body>
 </html>
