added fpc counter

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 			<div class='floor'></div>
 		</div>
 		<h2>WASD(or ponters) to move, QE(or mouse) to rotate. Press Enter for better perfomance</h2>
+		<h2 id="fpsOut" style="text-align: right; position: fixed; right: 0;top: 0;"></h2>
 		<img class="testWeapon" src='style/img/weapon.png'>
 	</div>
 </body>
