Move jquery to lib folder

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>DukeNukem3D</title>
 	<link rel="icon" href="style/img/icon.png">
 	<link rel="stylesheet" type="text/css" href="style/style.css">
-	<script type="text/javascript" src="script/jquery-3.2.1.min.js"></script>
+	<script type="text/javascript" src="libs/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="script/models.js"></script>
 	<script type="text/javascript" src="script/app.js" defer></script>
 </head>
