--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
 	<title>DukeNukem3D</title>
 	<link rel="icon" href="style/img/icon.png">
 	<link rel="stylesheet" type="text/css" href="style/style.css">
-	<script type="text/javascript" src="libs/jquery-3.2.1.min.js"></script>
-	<script type="text/javascript" src="script/models.js"></script>
-	<script type="text/javascript" src="script/app.js" defer></script>
 </head>
 <body>
 	<div id="camera">
@@ -20,6 +17,10 @@
 		<h2 id="fpsOut" style="text-align: right; position: fixed; right: 0;top: 0;"></h2>
 		<img class="testWeapon" src='style/img/weapon.png'>
 	</div>
+	<script type="text/javascript" src="libs/jquery-3.2.1.min.js"></script>
+	<script type="text/javascript" src="script/models.js"></script>
+	<script type="text/javascript" src="script/control.js"></script>
+	<script type="text/javascript" src="script/app.js"></script>
 </body>
 </html>
 
