--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 		<img class="testWeapon" src='style/img/weapon.png'>
 	</div>
 	<script type="text/javascript" src="libs/jquery-3.2.1.min.js"></script>
+	<script type="text/javascript" src="script/variables/constants.js"></script>
+	<script type="text/javascript" src="script/variables/sounds.js"></script>
 	<script type="text/javascript" src="script/models.js"></script>
 	<script type="text/javascript" src="script/control.js"></script>
 	<script type="text/javascript" src="script/app.js"></script>
