--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 	<script type="text/javascript" src="script/variables/sounds.js"></script>
 	<script type="text/javascript" src="script/models.js"></script>
 	<script type="text/javascript" src="script/control.js"></script>
+	<script type="text/javascript" src="script/classes/player.js"></script>
 	<script type="text/javascript" src="script/app.js"></script>
 </body>
 </html>
