--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 			<div class="object"></div>
 			<div class="glass" ></div>
 			<div class='floor'></div>
+			<div class="items"></div>
 		</div>
 		<h2>WASD(or ponters) to move, QE(or mouse) to rotate. Press Enter for better perfomance</h2>
 		<img class="testWeapon" src='style/img/weapon.png'>
@@ -22,6 +23,7 @@
 	<script type="text/javascript" src="script/models.js"></script>
 	<script type="text/javascript" src="script/control.js"></script>
 	<script type="text/javascript" src="script/classes/player.js"></script>
+	<script type="text/javascript" src="script/classes/item.js"></script>
 	<script type="text/javascript" src="script/app.js"></script>
 </body>
 </html>
