--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<script type="text/javascript" src="libs/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="script/variables/constants.js"></script>
 	<script type="text/javascript" src="script/variables/sounds.js"></script>
+	<script type="text/javascript" src="script/helpers.js"></script>
 	<script type="text/javascript" src="script/models.js"></script>
 	<script type="text/javascript" src="script/control.js"></script>
 	<script type="text/javascript" src="script/classes/player.js"></script>
