--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>DukeNukem3D</title>
-	<!-- <link rel="icon" href="style/img/icon.png">
-	<link rel="stylesheet" type="text/css" href="style/style.css"> -->
+	<link rel="icon" href="img/icon.png">
+	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
 	<div id="camera">
@@ -15,7 +15,7 @@
 			<div class="sprites"></div>
 		</div>
 		<h2>WASD(or ponters) to move, QE(or mouse) to rotate. Press Enter for better perfomance</h2>
-		<img class="testWeapon" src='style/img/weapon.png'>
+		<img class="testWeapon" src='img/weapon.png'>
 	</div>
 	<script type="text/javascript" src="main.js"></script>
 </body>
