--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>DukeNukem3D</title>
-	<link rel="icon" href="img/icon.png">
-</head>
-<body>
-	<div id="camera">
-		<div class="level">
-			<div class="object"></div>
-			<div class="glass" ></div>
-			<div class='floor'></div>
-			<div class="sprites"></div>
-		</div>
-		<h2>WASD(or ponters) to move, QE(or mouse) to rotate. Press Enter for better perfomance</h2>
-		<img class="testWeapon" src='img/weapon.png'>
-	</div>
-	<script type="text/javascript" src="main.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>DukeNukem3D</title>
+    <link rel="icon" href="img/icon.png" />
+  </head>
+  <body>
+    <div id="camera">
+      <div class="level">
+        <div class="object"></div>
+        <div class="glass"></div>
+        <div class="floor"></div>
+        <div class="sprites"></div>
+      </div>
+      <h2>
+        WASD(or ponters) to move, QE(or mouse) to rotate. Press Enter for better
+        perfomance
+      </h2>
+      <img class="testWeapon" src="img/weapon.png" />
+    </div>
+    <script type="text/javascript" src="main.js"></script>
+  </body>
 </html>
