--- a/public/index.html
+++ b/public/index.html
@@ -7,17 +7,13 @@
   </head>
   <body>
     <div id="camera">
+      <div class="testWeapon"></div>
       <div class="level">
         <div class="object"></div>
         <div class="glass"></div>
         <div class="floor"></div>
         <div class="sprites"></div>
       </div>
-      <h2>
-        WASD(or ponters) to move, QE(or mouse) to rotate. Press Enter for better
-        perfomance
-      </h2>
-      <img class="testWeapon" src="img/weapon.png" />
     </div>
     <script type="text/javascript" src="main.js"></script>
   </body>
