--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>DukeNukem3D</title>
+    <title>DoomNukemCSS</title>
     <link rel="icon" href="img/icon.png" />
   </head>
   <body>
