--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,15 @@
     <link rel="icon" href="img/icon.png" />
   </head>
   <body>
-    <div id="camera">
-      <div class="testWeapon"></div>
-      <div class="level">
-        <div class="object"></div>
-        <div class="glass"></div>
-        <div class="floor"></div>
-        <div class="sprites"></div>
+    <div id="root">
+      <div id="camera">
+        <div class="testWeapon"></div>
+        <div class="level">
+          <div class="object"></div>
+          <div class="glass"></div>
+          <div class="floor"></div>
+          <div class="sprites"></div>
+        </div>
       </div>
     </div>
     <script type="text/javascript" src="main.js"></script>
