--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
           <div class="sprites"></div>
         </div>
       </div>
+      <div id="ui"></div>
     </div>
     <script type="text/javascript" src="main.js"></script>
   </body>
