--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>DoomNukemCSS</title>
-    <link rel="icon" href="img/icon.png" />
+    <link rel="icon" href="icon.png" />
   </head>
   <body>
     <div id="root">
